# tracy

./: .gitignore  CMakeLists.txt  CMakePresets.json  NEWS  PerformanceTests1.sln  build-all.ps1  cpp.hint  test_chrome_export.cpp
.github/: copilot-instructions.md
capture/: CMakePresets.json
cmake/: TracyAutoZone.cmake  config.cmake  server.cmake  vendor.cmake
doc/: breakpoint_SRS.md
docs/: HComm_SRSSD_Refactor_Archive_2026-05-17.md  TracyNoSendPerfInvestigation.md  TracyNoSendPerf_Cpp14PlusCpp17_So_Integration.md
examples/: CMakeLists.txt  TracyLiteConfigExamples.cpp  TracyLiteDumpExample.cpp  TracyLiteExample.cpp  TracyLiteExample_Full.cpp  TracyLiteMemHook.cpp  TracyLite_ExportConfig_README.md  fibers.cpp
examples/ChromeExport/: CMakeLists.txt  ChromeExportExample.cpp
examples/NcclAlgoCompare/: CMakeLists.txt  Makefile  nccl_algo_compare.cpp
examples/NoSendPerf/: CMakeLists.txt  TracyHcomMacroLeakProbe.cpp  TracyNoSendPerfCase.cpp  TracyNoSendPerfCase.h  TracyNoSendPerfCase.hpp  TracyNoSendPerfRunner.cpp  tracylite_reconstruct_prefixed_e2e.py
examples/OpenCLVectorAdd/: CMakeLists.txt
examples/PerfettoTest/: PerfettoTest.cpp
examples/ToyPathTracer/Windows/: TestCpu.vcxproj
manual/: tracy.tex
profiler/: CMakePresets.json
profiler/src/llm/: skill.callstack.md  system.prompt.md
profiler/src/profiler/: TracyLlm.cpp  TracyLlm.hpp  TracyLlmChat.cpp  TracyLlmChat.hpp  TracyLlmEmbeddings.cpp  TracyLlmTools.cpp  TracyMarkdown.cpp  TracySourceView.cpp  TracyView.cpp  TracyView.hpp  TracyView_Callstack.cpp  TracyView_ContextSwitch.cpp  TracyView_FlameGraph.cpp  TracyView_Manual.cpp  TracyView_Messages.cpp  TracyView_ZoneInfo.cpp
public/: TracyClient.cpp
public/client/: TracyChromeExport.cpp  TracyChromeExport.hpp  TracyLiteAll.cpp  TracyLiteAll.hpp  TracyLiteChunkWriter.hpp  TracyLitePerfetto.cpp  TracyLitePerfetto.hpp  TracyProfiler.cpp  TracySysTrace.cpp
public/client/apple/: TracyMach.cpp
public/tracy/: TracyCUDA.hpp  TracyChromeExport.hpp  TracyHcomm.hpp
scripts/: download_perfetto_offline.py  extract_protozero.py  tracy_inject_zones.py  tracylite_reconstruct.py
scripts/perfetto-sdk-offline/: perfetto_protozero.cc
test/: CMakeLists.txt  CMakePresets.json
tracy_hcom/: README.md  TracyHcom.cpp  TracyHcom.hpp  TracyHcomApi.h  TracyHcomBundle.cmake  TracyHcomConfig.hpp  TracyHcomStubs.cpp
